@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Feb 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
+  xbmc-addons-pvr-9999.ebuild:
+  Use the frodo branch for now.
+
   12 Jan 2013; <stijn@gentoo.org> xbmc-addons-pvr-9999.ebuild:
   Make sure to install addons in the correct location.
 
